--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
   "dependencies": {
     "@elastic/datemath": "^5.0.3",
     "@elastic/eui": "^95.3.0",
+    "@emailjs/browser": "^4.4.1",
     "@emotion/css": "^11.11.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@types/react-slick": "^0.23.13",
+    "emailjs": "^4.0.3",
     "moment": "^2.30.1",
     "next": "^14.2.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.52.1",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1"
   },
